--- a/css/main.sass
+++ b/css/main.sass
@@ -1,52 +1,26 @@
+//@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700')
 
-audio,
-canvas,
-iframe,
-img,
-svg,
-video
-    vertical-align: middle
-
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset
-    border: 0
-    margin: 0
-    padding: 0
-
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea
-    resize: vertical
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700')
+// variables
+$module-height: 50px
 
 html
     color: #222
     font-size: 1em
     line-height: 1.4
     font-family: 'Inconsolata', monospace
+    background: #000
 
-#menu 
+#controls
+    //position: absolute
+    top: 0
+    left: 0
     background: #222
-    height: 30px
-    width: 100%
-    color: #eee
-    display: block
-    display: none
-    z-index: 20
-    position: absolute
+    color: #777
+    //border-bottom: 8px solid #000
+    padding: 10px
+    button
+        border: 1px solid #777
+        background: none
 
 .menu-toggle
     background: none
@@ -63,24 +37,20 @@ html
 .loading-spinner
     display: none
 
-#canvas
-    height: 500px
-
-#main
-    //padding: 15px
-
 .module
-    svg
-        //border: 1px solid #ddd
+    height: $module-height
+    background: #000
+
+#particles
+    height: 400px
+    background: #222
 
 #emotion-gradient
     overflow: hidden
     position: relative
-    //border-right: 2px solid #FFF
-    //width: 10%
     svg
         width: 100vw
 
 #emotion-gradient-bottom
     background: #ddd
-    margin-bottom: -150px    
+    margin-bottom: -50px
