--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,19 @@
-@import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700");
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle; }
-
-/* Remove default fieldset styles.
- */
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0; }
-
-/* Allow only vertical resizing of textareas.
- */
-textarea {
-  resize: vertical; }
-
-/* ==========================================================================
- * Author's custom styles
- * ========================================================================== */
 html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
-  font-family: "Inconsolata", monospace; }
+  font-family: "Inconsolata", monospace;
+  background: #000; }
 
-#menu {
+#controls {
+  top: 0;
+  left: 0;
   background: #222;
-  height: 30px;
-  width: 100%;
-  color: #eee;
-  display: block;
-  display: none;
-  z-index: 20;
-  position: absolute; }
+  color: #777;
+  padding: 10px; }
+  #controls button {
+    border: 1px solid #777;
+    background: none; }
 
 .menu-toggle {
   background: none;
@@ -53,8 +30,13 @@ html {
 .loading-spinner {
   display: none; }
 
-#canvas {
-  height: 500px; }
+.module {
+  height: 50px;
+  background: #000; }
+
+#particles {
+  height: 400px;
+  background: #222; }
 
 #emotion-gradient {
   overflow: hidden;
@@ -64,6 +46,6 @@ html {
 
 #emotion-gradient-bottom {
   background: #ddd;
-  margin-bottom: -150px; }
+  margin-bottom: -50px; }
 
 /*# sourceMappingURL=main.css.map */
