added image module

--- a/css/main.css
+++ b/css/main.css
@@ -48,4 +48,8 @@ html {
   background: #ddd;
   margin-bottom: -50px; }
 
+#image-module {
+  height: 400px;
+  background: #ddd; }
+
 /*# sourceMappingURL=main.css.map */
