--- a/css/main.sass
+++ b/css/main.sass
@@ -54,3 +54,7 @@ html
 #emotion-gradient-bottom
     background: #ddd
     margin-bottom: -50px
+
+#image-module
+    height: 400px
+    background: #ddd
