--- a/css/main.sass
+++ b/css/main.sass
@@ -63,6 +63,9 @@ html
     #image-module
         height: 400px
 
+    #canvas-sketch
+        background: #ddd
+        height: 400px
     .text-output
         //position: absolute
         color: #FFF
