--- a/css/main.css
+++ b/css/main.css
@@ -30,22 +30,22 @@ html {
   transition: 0.5s;
   -webkit-transition: all 0.5s;
   margin: 0;
-  width: 1000px;
+  width: 2000px;
   height: auto;
   position: absolute;
   border: 2px solid #777;
   -webkit-transform: scale3d(1, 1, 1); }
   .modules .module {
-    height: 50px;
+    height: 800px;
     background: #000; }
   .modules #emotion-gradient {
     overflow: hidden;
     position: relative; }
     .modules #emotion-gradient svg {
-      width: 100vw; }
+      width: 2000px; }
   .modules #emotion-gradient-bottom {
     background: #ddd;
-    margin-bottom: -50px; }
+    margin-bottom: -800px; }
   .modules #particles {
     height: 400px;
     background: #000; }
