--- a/css/main.sass
+++ b/css/main.sass
@@ -89,8 +89,13 @@ html
 path
     stroke: #fff
     fill: none
-    width: 100px
     stroke-width: 2
     stroke-dasharray: 30000
     stroke-dashoffset: 30000
     animation: dash 500s linear forwards
+
+#svgContainer
+    height: 1400px
+    svg
+        height: 100%
+        width: 100%
