--- a/css/main.css
+++ b/css/main.css
@@ -74,10 +74,15 @@ html {
 path {
   stroke: #fff;
   fill: none;
-  width: 100px;
   stroke-width: 2;
   stroke-dasharray: 30000;
   stroke-dashoffset: 30000;
   animation: dash 500s linear forwards; }
+
+#svgContainer {
+  height: 1400px; }
+  #svgContainer svg {
+    height: 100%;
+    width: 100%; }
 
 /*# sourceMappingURL=main.css.map */
