--- a/css/main.css
+++ b/css/main.css
@@ -44,45 +44,66 @@ html {
     .modules #emotion-gradient svg {
       width: 2000px; }
   .modules #emotion-gradient-bottom {
-    background: #ddd;
     margin-bottom: -800px; }
   .modules #particles {
-    height: 400px;
+    height: 800px;
     background: #000; }
   .modules #image-module {
-    height: 400px; }
+    height: 800px; }
   .modules #canvas-sketch {
     background: #ddd;
-    height: 400px; }
+    height: 800px; }
   .modules .text-output {
     color: #FFF;
     padding: 10px;
     min-height: 60px;
-    font-size: 30px; }
+    font-size: 180px;
+    padding: 50px;
+    padding-bottom: 100px;
+    min-eight: 200px; }
     .modules .text-output .text-output-r {
       text-align: right; }
     .modules .text-output .text-output-l {
       float: left; }
+
+#shape-drawing {
+  background: #000;
+  height: 800px; }
+
+#constellation {
+  background: #000;
+  height: 800px; }
 
 #overlay {
   position: fixed;
   z-index: 1000; }
 
 @keyframes dash {
-  to {
+  50% {
     stroke-dashoffset: 0; } }
 path {
   stroke: #fff;
   fill: none;
-  stroke-width: 2;
-  stroke-dasharray: 30000;
-  stroke-dashoffset: 30000;
-  animation: dash 500s linear forwards; }
+  stroke-width: 3;
+  stroke-dasharray: 10000;
+  stroke-dashoffset: 10000;
+  animation: dash 30s ease-in-out; }
 
 #svgContainer {
-  height: 1400px; }
+  height: 100vh;
+  width: 100vw;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  transform: scale(2); }
   #svgContainer svg {
     height: 100%;
     width: 100%; }
+
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both; }
 
 /*# sourceMappingURL=main.css.map */
