--- a/css/main.sass
+++ b/css/main.sass
@@ -84,7 +84,13 @@ html
             float: left
 
 #shape-drawing
-    background: #000
+    //background: #000
+    //border: 2px solid #fff
+    position: absolute
+    left: 0
+    top: 800px
+    z-index: 1000
+    width: $total-width
     height: $total-height
 
 #constellation
