--- a/css/main.sass
+++ b/css/main.sass
@@ -2,8 +2,8 @@
 
 // variables
 $module-height: 800px
-$gradient-margin-bottom: -800px
-$total-width: 2000px
+//$gradient-margin-bottom: -800px
+$total-width: 1280px
 $total-height: 800px
 
 html
@@ -34,33 +34,131 @@ html
         top: 3px
         display: none
 
-.modules
+/*  ====================================================  */
+
+
+#overlay
+    position: fixed
+    z-index: 1000
+
+.centered
+    //text-align: center
+.module
+    height: $total-height
+
+.module-group
+    //margin: 20px auto
+    display: inline-block
+    width: $total-width
+
+    left: 0
+    right: 0
+
+.static-modules
+    position: absolute
+    z-index: 1000
+    .module 
+        height: $total-height
+        //border: 10px solid #0f0
+        margin: 30px 0
+
+    #shape-drawing
+
+    #constellation
+
+    #svg-drawing
+        position: fixed
+        height: 100vh
+        width: 100vw
+        left: 0
+        top: 0
+        z-index: 100
+        transform: scale(2)
+        svg
+            height: 100%
+            width: 100%
+        
+        @keyframes dash
+            50% 
+                stroke-dashoffset: 0      
+
+        path
+            stroke: #fff
+            fill: none
+            stroke-width: 3
+            stroke-dasharray: 10000
+            stroke-dashoffset: 10000
+            animation: dash 30s ease-in-out
+
+.text-output
+    position: fixed
+    z-index: 2000
+    bottom: 0
+    //top: 0
+    left: 0
+    color: #FFF
+    margin: 0
+    height: 100vh
+    width: 100vw
+    //min-height: 60px
+    font-size: 130px
+    //min-height: 200px
+    .text-cont 
+        display: table-row
+        vertical-align: bottom
+        height: 1px
+    .text-output-r
+        position: absolute
+        right: 0
+        bottom: 20px
+        padding: 20px
+        float: right
+        text-align: right
+        opacity: 0.5
+    .text-output-l
+        position: absolute
+        left: 0
+        bottom: 20px
+        padding: 20px
+        opacity: 0.5
+        //float: left
+
+
+.dynamic-modules
     transition: 0.5s
     -webkit-transition: all 0.5s
-    //margin-top: 40px
-    margin: 0
-    width: $total-width
-    height: auto
-    position: absolute
-    border: 2px solid #777
+    //position: absolute
+    //left: 0
+    //right: auto
+    //top: 800px
     -webkit-transform: scale3d(1,1,1)
-    .module
-        height: $module-height
-        background: #000
 
-    #emotion-gradient
-        overflow: hidden
-        position: relative
-        svg
-            width: $total-width
+    .module-section
+        //border: 10px solid #f00
+        width: $total-width
+        min-height: $total-height
+        margin: 30px 0
 
-    #emotion-gradient-bottom
-        margin-bottom: $gradient-margin-bottom
+    #gradient-and-history
+        height: calc(2 * $total-height)
     
+        #emotion-gradient
+            overflow: hidden
+            position: relative
+            top: 0
+            svg
+                width: $total-width
+
+        #emotion-gradient-bottom
+            margin-bottom: -800px
+
     #particles
         height: $total-height
         background: #000
-
+    
+    #video-module
+        height: $module-height
+    
     #image-module
         height: $total-height
 
@@ -69,64 +167,11 @@ html
         height: $total-height
    
     
-    .text-output
-        //position: absolute
-        color: #FFF
-        padding: 10px
-        min-height: 60px
-        font-size: 180px
-        padding: 50px
-        padding-bottom: 100px
-        min-eight: 200px
-        .text-output-r
-            text-align: right
-        .text-output-l
-            float: left
 
-#shape-drawing
-    //background: #000
-    //border: 2px solid #fff
-    position: absolute
-    left: 0
-    top: 800px
-    z-index: 1000
-    width: $total-width
-    height: $total-height
 
-#constellation
-    background: #000
-    height: $total-height
 
-#overlay
-    position: fixed
-    z-index: 1000
 
-@keyframes dash
-    //0%
-    //    stroke-dashoffset: 30000
-    50% 
-        stroke-dashoffset: 0      
-
-path
-    stroke: #fff
-    fill: none
-    stroke-width: 3
-    stroke-dasharray: 10000
-    stroke-dashoffset: 10000
-    animation: dash 30s ease-in-out
-
-#svgContainer
-    height: 100vh
-    width: 100vw
-    left: 0
-    top: 0
-    z-index: 100
-    position: fixed
-    transform: scale(2)
-    svg
-        height: 100%
-        width: 100%
-
+/*  ====================================================  */
 .clearfix
     &::after
         display: block
