--- a/css/main.css
+++ b/css/main.css
@@ -22,13 +22,14 @@ html {
     background: none; }
   #controls .loading-spinner {
     position: absolute;
-    left: 220px;
+    left: 3px;
     top: 3px;
     display: none; }
 
 /*  ====================================================  */
 #overlay {
   position: fixed;
+  -webkit-transition: all 0.03s;
   z-index: 1000; }
 
 .module {
@@ -70,7 +71,6 @@ html {
 
 .text-output {
   position: fixed;
-  z-index: 2000;
   bottom: 0;
   left: 0;
   color: #FFF;
@@ -82,19 +82,19 @@ html {
     display: table-row;
     vertical-align: bottom;
     height: 1px; }
-  .text-output .text-output-r {
+  .text-output .text-output-0 {
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+    padding: 20px;
+    opacity: 0.5; }
+  .text-output .text-output-1 {
     position: absolute;
     right: 0;
     bottom: 20px;
     padding: 20px;
     float: right;
     text-align: right;
-    opacity: 0.5; }
-  .text-output .text-output-l {
-    position: absolute;
-    left: 0;
-    bottom: 20px;
-    padding: 20px;
     opacity: 0.5; }
 
 .dynamic-modules {
@@ -105,16 +105,20 @@ html {
     width: 1280px;
     min-height: 800px;
     margin: 30px 0; }
-  .dynamic-modules #gradient-and-history {
-    height: calc(2 * $total-height); }
-    .dynamic-modules #gradient-and-history #emotion-gradient {
-      overflow: hidden;
-      position: relative;
-      top: 0; }
-      .dynamic-modules #gradient-and-history #emotion-gradient svg {
-        width: 1280px; }
-    .dynamic-modules #gradient-and-history #emotion-gradient-bottom {
-      margin-bottom: -800px; }
+  .dynamic-modules #gradient-group {
+    height: 800px; }
+  .dynamic-modules #emotion-history-grid {
+    height: total-height; }
+    .dynamic-modules #emotion-history-grid svg {
+      height: 800px; }
+  .dynamic-modules #emotion-gradient {
+    overflow: hidden;
+    position: relative;
+    top: 0; }
+    .dynamic-modules #emotion-gradient svg {
+      width: 1280px; }
+  .dynamic-modules #emotion-gradient-bottom {
+    margin-bottom: -800px; }
   .dynamic-modules #particles {
     height: 800px;
     background: #000; }
