--- a/css/main.sass
+++ b/css/main.sass
@@ -1,7 +1,7 @@
 //@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700')
 
 // variables
-$total-width: 1280px
+$total-width: 100vw
 $total-height: 800px
 
 html
@@ -10,8 +10,12 @@ html
     line-height: 1.4
     font-family: 'Inconsolata', monospace
     background: #000
+    margin: 0
+    padding: 0
     height: 100%
     width: 100%
+    &::-webkit-scrollbar 
+        width: 0 !important
 
 #controls
     position: fixed
@@ -40,38 +44,34 @@ html
     -webkit-transition: all 0.03s
     z-index: 1000
 
-.centered
-    //text-align: center
 .module
-    height: $total-height
+    //height: $total-height
 
 .module-group
-    //margin: 20px auto
-    display: inline-block
-    width: $total-width
+    //width: $total-width
     left: 0
     right: 0
 
 .static-modules
     position: absolute
+    top: 0
+    left: 0
     z-index: 1000
-    .module 
-        height: $total-height
-        //border: 10px solid #0f0
-        margin: 30px 0
-
-    #shape-drawing
-
-    #constellation
-
-    #svg-drawing
-        position: fixed
-        height: 100vh
-        width: 100vw
+    //overflow: hidden
+    .module
+        position: absolute
         left: 0
         top: 0
-        z-index: 100
-        transform: scale(2)
+        bottom: 0
+        right: 0
+        //border: 1px solid #0f0
+    
+    #shape-drawing
+        left: 0
+        //left: 100%
+    
+    #svg-drawing
+        left: 200%
         svg
             height: 100%
             width: 100%
@@ -89,37 +89,35 @@ html
             animation: dash 30s ease-in-out
 
 .text-output
-    position: fixed
-    //z-index: 2000
+    position: absolute
     bottom: 0
-    //top: 0
     left: 0
-    color: #FFF
+    top: 0
+    color: rgba(255,255,255,0.6)
     margin: 0
-    height: 100vh
-    width: 100vw
-    //min-height: 60px
-    font-size: 130px
-    //min-height: 200px
-    .text-cont 
-        display: table-row
-        vertical-align: bottom
-        height: 1px
+    //opacity: 0.3
+    font-size: 20rem
+    mix-blend-mode: overlay
+    display: block !important
+    z-index: 5000
     .text-output-0
+        transition: all 2s ease
         position: absolute
         left: 0
-        bottom: 20px
-        padding: 20px
-        opacity: 0.5
+        top: 0
+        //opacity: 0.5
+        mix-blend-mode: overlay
+
     .text-output-1
+        transition: all 2s ease
         position: absolute
         right: 0
-        bottom: 20px
-        padding: 20px
+        top: 0
         float: right
         text-align: right
-        opacity: 0.5
-        //float: left
+        //opacity: 0.5
+        padding-top: 90px
+        mix-blend-mode: overlay
 
 .dynamic-modules
     transition: 0.5s
@@ -127,50 +125,30 @@ html
     -webkit-transform: scale3d(1,1,1)
 
     .module-section
-        width: $total-width
-        min-height: $total-height
-        margin: 30px 0
-        //border: 10px solid #f00
-        //display: none
+        position: absolute
+        top: 0
+        left: 0
 
     #gradient-group
-        height: $total-height
-    
-    #emotion-history-grid
-        height: total-height
-        svg
-            height: $total-height
+        .module
+            height: 100%
 
-    #emotion-gradient
+        #emotion-gradient-bottom
+            margin-bottom: -100vh
+
+    #emotion-gradient-top
         overflow: hidden
         position: relative
         top: 0
         svg
-            width: $total-width
+            //width: $total-width
 
-    #emotion-gradient-bottom
-        margin-bottom: -800px
-
-    #particles
-        height: $total-height
-        background: #000
-    
-    #video-module
-        height: $module-height
-    
-    #image-module
-        height: $total-height
-
-    #canvas-sketch
-        background: #ddd
-        height: $total-height
+    #ytplayer
+        z-index: 1000
+        opacity: 0
    
-    
-
-
-
-
 /*  ====================================================  */
+
 .clearfix
     &::after
         display: block
