--- a/css/main.sass
+++ b/css/main.sass
@@ -41,7 +41,7 @@ html
 
 #overlay
     position: fixed
-    -webkit-transition: all 0.03s
+    -webkit-transition: all 1s
     z-index: 1000
 
 .module
@@ -137,6 +137,7 @@ html
             margin-bottom: -100vh
 
     #emotion-gradient-top
+        //-webkit-transition: all 1s
         overflow: hidden
         position: relative
         top: 0
@@ -144,8 +145,10 @@ html
             //width: $total-width
 
     #ytplayer
+        -webkit-transition: all 1s
         z-index: 1000
         opacity: 0
+        transform: scale(1.2)
    
 /*  ====================================================  */
 
