--- a/css/main.sass
+++ b/css/main.sass
@@ -1,8 +1,3 @@
-//@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700')
-
-// variables
-$total-width: 100vw
-$total-height: 800px
 
 html
     color: #222
@@ -14,6 +9,7 @@ html
     padding: 0
     height: 100%
     width: 100%
+
     &::-webkit-scrollbar 
         width: 0 !important
 
@@ -41,14 +37,10 @@ html
 
 #overlay
     position: fixed
-    -webkit-transition: all 1s
+    transition: all 1s
     z-index: 1000
 
-.module
-    //height: $total-height
-
 .module-group
-    //width: $total-width
     left: 0
     right: 0
 
@@ -56,7 +48,7 @@ html
     position: absolute
     top: 0
     left: 0
-    //overflow: hidden
+
     .module
         z-index: 1000
         position: absolute
@@ -64,16 +56,14 @@ html
         top: 0
         bottom: 0
         right: 0
-        //border: 1px solid #0f0
     
     #shape-drawing
         left: 0
         transition: all 2s ease
         transform: scale(1)
-        //left: 100%
     
     #svg-drawing
-        //left: 200%
+        transform: scale(1.2)
         svg
             height: 100%
             width: 100%
@@ -86,8 +76,6 @@ html
             stroke: #fff
             stroke-width: 3
             fill: none
-            //stroke-dashsarray: 10000
-            stroke-dashoffset: 10000
             animation: dash 30s ease-in-out
 
 .text-output
@@ -124,8 +112,7 @@ html
 
 .dynamic-modules
     transition: 0.5s
-    -webkit-transition: all 0.5s
-    -webkit-transform: scale3d(1,1,1)
+    transform: scale3d(1,1,1)
 
     .module-section
         //position: absolute
@@ -154,8 +141,9 @@ html
         transform: scale(1.2)
 
 #nature-image-module, #face-image-module
-    -webkit-transition: all 1s
+    transition: all 1s
     transform: scale(1)
+
 /*  ====================================================  */
 
 .clearfix
