added noise to graph

--- a/css/main.sass
+++ b/css/main.sass
@@ -139,7 +139,7 @@ html
     #ytplayer
         -webkit-transition: all 1s
         z-index: 1000
-        opacity: 0
+        //opacity: 0
         transform: scale(1.2)
 
 #nature-image-module, #face-image-module
