--- a/css/main.sass
+++ b/css/main.sass
@@ -87,30 +87,24 @@ html
     top: 0
     color: rgba(255,255,255,0.6)
     margin: 0
-    //opacity: 0.3
-    font-size: 20rem
-    mix-blend-mode: overlay
-    //display: block !important
-    display: none
+    font-size: 12px
     z-index: 5000
+
     .text-output-0
+        padding: 5px 10px
+        background: #fff
+        color: #222
         transition: all 2s ease
         position: absolute
-        left: 0
-        top: 0
-        //opacity: 0.5
-        mix-blend-mode: overlay
+        //mix-blend-mode: overlay
 
     .text-output-1
+        padding: 5px 10px
+        background: #fff
+        color: #222
         transition: all 2s ease
         position: absolute
-        right: 0
-        top: 0
-        float: right
-        text-align: right
-        //opacity: 0.5
-        padding-top: 90px
-        mix-blend-mode: overlay
+        //mix-blend-mode: overlay
 
 .dynamic-modules
     transition: 0.5s
