--- a/css/main.sass
+++ b/css/main.sass
@@ -61,6 +61,7 @@ html
     
     #shape-drawing
         left: 0
+        background: rgba(255,255,255,0)
         transition: all 2s ease
         transform: scale(1)
     
@@ -94,7 +95,7 @@ html
         padding: 5px 10px
         background: #fff
         color: #222
-        transition: all 2s ease
+        transition: all 3s ease
         position: absolute
         //mix-blend-mode: overlay
 
@@ -102,7 +103,7 @@ html
         padding: 5px 10px
         background: #fff
         color: #222
-        transition: all 2s ease
+        transition: all 3s ease
         position: absolute
         //mix-blend-mode: overlay
 
