--- a/css/main.sass
+++ b/css/main.sass
@@ -100,26 +100,17 @@ html
     bottom: 0
     left: 0
     top: 0
-    color: rgba(255,255,255,0.6)
     margin: 0
     font-size: 12px
     z-index: 5000
 
-    .text-output-0
+    .text-output-0, .text-output-1
         padding: 5px 10px
-        background: #fff
-        color: #222
+        background: #000
+        color: #fff
         transition: all 3s ease
         position: absolute
-        //mix-blend-mode: overlay
-
-    .text-output-1
-        padding: 5px 10px
-        background: #fff
-        color: #222
-        transition: all 3s ease
-        position: absolute
-        //mix-blend-mode: overlay
+        font-weight: 800 !important
 
 .dynamic-modules
     transition: 0.5s
